# yrby

./: .gitignore  .rubocop.yml  CHANGELOG-actioncable.md  CHANGELOG-decoder.md  CHANGELOG-rails.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Gemfile  INTEROP_TESTING_GUIDE.md  README.md  Rakefile  y-ruby-actioncable.gemspec  y-ruby-decoder.gemspec  y-ruby.gemspec  yrb-lite-actioncable.gemspec  yrb-lite.gemspec  yrby-actioncable.gemspec  yrby-decoder.gemspec  yrby-rails.gemspec  yrby.gemspec
.github/workflows/: ci.yml  cross-gem.yml  release.yml
app/models/y/: document.rb  document_update.rb
bench/: generate_large_fixture.mjs  parallelism_bench.rb  torture.rb
docs/: ACCURACY.md  PROSEMIRROR.md  PROSEMIRROR_YCRDT_ANALYSIS.md  RESEARCH_INDEX.md  RESEARCH_SUMMARY.md
examples/actioncable-demo/: .gitignore  Dockerfile  Gemfile  README.md  docker-compose.anycable.yml  docker-compose.yml
examples/actioncable-demo/config/: application.rb  database.yml  routes.rb  storage.yml
examples/actioncable-demo/frontend/: agent_browsers.mjs  agent_collab.mjs  anycable_concurrent.mjs  anycable_guarantee.mjs  anycable_probe.mjs  audit.mjs  audit_scenarios.mjs  boot_server.sh  build.mjs  chaos.mjs  crash_recovery.mjs  e2e.mjs  e2e_suite.sh  four_browsers.mjs  gap_strike.mjs  lexxy_render_e2e.mjs  loadtest.mjs  multi_browser.mjs  multiprocess.mjs  package.json  reliable.mjs  render_check.rb  (+6 more)
ext/y_ruby/: extconf.rb
ext/yrb_lite/: Cargo.toml  extconf.rb
ext/yrb_lite/src/: lib.rs  prosemirror.rs  protocol.rs
ext/yrby/: Cargo.toml
ext/yrby/crates/html-core/: Cargo.toml  README.md
ext/yrby/crates/html-core/src/: lib.rs
ext/yrby/crates/lexical-html/: Cargo.toml  README.md
ext/yrby/crates/lexical-html/src/: lib.rs
ext/yrby/crates/lexical-html/src/fixtures/: lexxy_full.core.html  lexxy_full.html  lexxy_gallery.html  lexxy_styles.html  lexxy_torture.core.html  lexxy_torture.html
ext/yrby/crates/prosemirror-html/: Cargo.toml  README.md
ext/yrby/crates/prosemirror-html/src/: lib.rs
ext/yrby/crates/prosemirror-html/src/fixtures/: prosemirror_details.html  prosemirror_mention.core.html  prosemirror_table.html  prosemirror_tiptap.core.html
ext/yrby/crates/render-rules/: Cargo.toml  README.md
ext/yrby/src/: lexical_html.rs  lib.rs  map.rs  prosemirror_html.rs  protocol.rs  read.rs  render_rules.rs
ext/yrby/src/fixtures/: lexxy_gallery.core.html  prosemirror_mention.html  prosemirror_textstyle.html  prosemirror_tiptap.html
lib/: y-ruby.rb  y.rb  yrb_lite.rb  yrby-actioncable.rb  yrby-decoder.rb  yrby-rails.rb
lib/y/: action_cable.rb  decoder.rb  lexxy.rb  rendering.rb  tiptap.rb  update_log.rb  version.rb
lib/yrb_lite/: prosemirror_extractor.rb  sync.rb  version.rb
lib/yrby/: engine.rb
test/: action_cable_include_test.rb  awareness_test.rb  codec_test.rb  decoder_test.rb  doc_test.rb  document_test.rb  fiber_scheduler_test.rb  generated_store_test.rb  html_test.rb  install_generator_test.rb  interop_test.rb  map_test.rb  packaging_test.rb  prosemirror_html_test.rb  prosemirror_test.rb  rendering_rules_test.rb  robustness_test.rb  sync_engine_test.rb  sync_test.rb  test_helper.rb  thread_safety_test.rb  update_log_test.rb
test/fixtures/: generate_fixtures.mjs  generate_prosemirror_fixture.mjs  yjs_fixtures.rb  yjs_generator.mjs
test/support/: active_record.rb
(+48 files in other folders)
