[package]
name = "yrby"
version = "0.1.0"
edition = "2021"
authors = ["JP Camara <johnpcamara@gmail.com>"]
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
magnus = "0.8"
rb-sys = "0.9"
yrs = { version = "0.27", features = ["sync"] }
serde_json = "1.0"
yrs-html-core = { path = "crates/html-core" }
yrs-lexical-html = { path = "crates/lexical-html" }

[dev-dependencies]
rb-sys-env = "0.1"
