[package]
name = "yrs-html-core"
description = "Internal core for the yrs-*-html renderer crates; depend on those instead"
repository = "https://github.com/jpcamara/yrby"
readme = "README.md"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["JP Camara <johnpcamara@gmail.com>"]
license = "MIT"
publish = false

[dependencies]
yrs = { version = "0.27", features = ["sync"] }
serde_json = "1.0"
