[package]
name = "yrs-lexical-html"
description = "Render Lexical-shaped yrs documents to HTML, no browser or Node required"
repository = "https://github.com/jpcamara/yrby"
version = "0.1.0"
edition = "2021"
authors = ["JP Camara <johnpcamara@gmail.com>"]
license = "MIT"
publish = false

[dependencies]
yrs = { version = "0.27", features = ["sync"] }
serde_json = "1.0"
yrs-render-rules = { path = "../render-rules" }
