[package]
name = "yrs-prosemirror-html"
description = "Render ProseMirror-shaped yrs documents to HTML, no browser or Node required"
repository = "https://github.com/jpcamara/yrby"
readme = "README.md"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["JP Camara <johnpcamara@gmail.com>"]
license = "MIT"
keywords = ["yjs", "crdt", "prosemirror", "tiptap", "html"]
categories = ["text-processing", "web-programming"]

[dependencies]
yrs = { version = "0.27", features = ["sync"] }
serde_json = "1.0"
yrs-html-core = { path = "../html-core", version = "0.1.0" }
