[package]
name = "yrs-render-rules"
description = "Internal support crate for yrs-lexical-html and yrs-prosemirror-html; depend on those instead"
repository = "https://github.com/jpcamara/yrby"
readme = "README.md"
version = "0.1.0"
edition = "2021"
authors = ["JP Camara <johnpcamara@gmail.com>"]
license = "MIT"
publish = false

[dependencies]
yrs = { version = "0.27", features = ["sync"] }
serde_json = "1.0"
